# REIKA-escpos

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REIKA-NOTES.md  build-windows.sh  reika-watchdog.vbs
.claude/commands/: apply-changes.md  gather-context.md  produce-rca.md  rca-analyze.md
.github/workflows/: release.yml
RCA/: 2026-02-05-claude-md-compliance-review.md  rca-printer-false-success-response.md
docs/: frontend-error-handling-fix.md
openspec/: project.md
openspec/changes/add-reprint-and-sensor-registration/specs/configuration/: spec.md
openspec/changes/add-reprint-and-sensor-registration/specs/gui/: spec.md
openspec/changes/add-reprint-and-sensor-registration/specs/http-api/: spec.md
openspec/changes/add-reprint-and-sensor-registration/specs/printer-service/: spec.md
openspec/changes/archive/2026-02-17-add-reprint-and-sensor-registration/: REIKA-UPSTREAM-GUIDE.md  design.md  proposal.md  tasks.md
openspec/specs/configuration/: spec.md
openspec/specs/escpos-commands/: spec.md
openspec/specs/gui/: spec.md
openspec/specs/http-api/: spec.md
openspec/specs/printer-service/: spec.md
openspec/specs/usb-driver/: spec.md
src/: error.rs  main.rs  models.rs  print.rs  server.rs
src/app/: config.rs  file_logger.rs  gui.rs  mod.rs  notifications.rs  print_log.rs  receipt_renderer.rs  single_instance.rs  tray.rs
src/handlers/: mod.rs  print.rs
src/models/: command.rs  request.rs  response.rs
src/routes/: mod.rs  print.rs
src/services/: mod.rs  printer.rs  reprint.rs  sensor_reporter.rs  usb_driver.rs
