[package]
name = "reika-escpos"
version = "1.0.3"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
escpos = { version = "0.17.0", features = ["barcodes", "codes_2d", "usb"] }
rusb = "0.9.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"]}
warp = "0.3.7"
