[package]
name = "reika-escpos"
version = "2.0.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11.3"
escpos = { version = "0.17.0", features = ["barcodes", "codes_2d", "usb"] }
rusb = "0.9.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync"] }
warp = "0.3.7"

# GUI
eframe = "0.29"
egui = "0.29"

# System tray
tray-icon = "0.19"

# Config file
toml = "0.8"

# Timestamps for log
chrono = { version = "0.4", features = ["serde"] }

# Notifications (Windows toast notifications)
notify-rust = "4"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
# winit is needed by eframe, but including explicit dependency for Windows API access
winit = "0.30"
